15-OCI-Cluster-Kubernetes/02-Whoami/01-Whoami-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-deploymenti
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami-deploymenti
  template:
    metadata:
      labels:
        app: whoami-deploymenti
    spec:
      containers:
      - name: whoami-konteyneri
        image: containous/whoami
