15-OCI-Cluster-Kubernetes/02-Whoami/02-Whoami-service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami-servisi
spec:
  type: NodePort
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoami-deploymenti
